# airport-inspection-platform

./: .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README_INTERVIEW.md  TERMS_OF_USE.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  e2e-integration.yml  e2e.yml  security-scan.yml
__TEST__/e2e/: playwright.config.ts  playwright.integration.config.ts
__TEST__/frontend/: alerts.test.ts  audit-api-auth.test.ts  audit-api.test.ts  auth-store.test.ts  incident-api-auth.test.ts  incident-api.test.ts  map-geo.test.ts  (+11 more)
docs/: DEMO_RESCUE.md  DEMO_WALKTHROUGH.md  FAILURE_MODE_MATRIX.md  PR_REVIEW_GUIDE.md
services/ai-inference/: Dockerfile  README.md  pyproject.toml
services/ai-inference/src/: app.py  main.py  redis_client.py
services/ai-inference/src/confidence/: __init__.py  calibration.py  smoothing.py
services/ai-inference/src/consumers/: __init__.py  frame_consumer.py
services/ai-inference/src/detectors/: __init__.py  anomaly.py  base.py  crack.py  fod.py  snowbank.py  wildlife.py
services/ai-inference/src/fallback/: __init__.py  runtime_mode.py
services/ai-inference/src/models/: __init__.py  events.py
services/ai-inference/src/pipeline/: __init__.py  batch.py  config.py  orchestrator.py  runtime.py
services/ai-inference/src/publishers/: __init__.py  detection_publisher.py
(+366 files in other folders)
