[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-inference"
version = "0.3.0"
description = "Simulated AI inference service. This PR adds the FastAPI shell; real detectors (FOD, crack, snowbank, wildlife, anomaly) + calibration + batch + GPU fallback land in Phase 3."
requires-python = ">=3.12"
license = { text = "PolyForm-NC-1.0.0" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "redis==5.1.1",
    "prometheus-client==0.21.0",
    "pydantic==2.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.7.1",
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["../../__TEST__/pipeline"]
pythonpath = ["."]
asyncio_mode = "auto"
